# ANN-Backpropagation

./: CMakeLists.txt  README.txt
Data/: winequality.csv
Data/WineQuality/: winequality.csv
Source/: data.cpp  data.h  main.cpp  neural_network.cpp  neural_network.h
